# tandoor-mcp

./: .dockerignore  .env.dev  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  plan.md  rust-toolchain.toml  tool.md
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-automerge.yml  publish.yml  release.yml
scripts/: get_token.sh  test.sh
src/: lib.rs  main.rs  server.rs
src/client/: auth.rs  client.rs  mod.rs  types.rs
tests/: test_authentication.rs  test_mcp_tools.rs  test_recipes.rs  test_shopping_list.rs
tests/common/: mod.rs
