[package]
name = "mcp-tandoor"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-sse-server"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
urlencoding = "2.1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = "0.7"
