[package]
name = "mcp-tandoor"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { version = "0.3", features = ["server", "transport-io"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.46", features = ["full"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
dotenvy = "0.15"
urlencoding = "2.1"
schemars = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }

[dev-dependencies]
serial_test = "3.0"
pretty_assertions = "1.4"
test-log = "0.2"
env_logger = "0.11"
log = "0.4"
